--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
-dgShowLocalGraph=true
+dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=false
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
 dgShowTags=true
