--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Marcus Deviation
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
@@ -11,8 +11,8 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
-USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/primary-theme/obsidian/HEAD/theme.css
+USE_FULL_RESOLUTION_IMAGES=true
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
